Add a functionality to resize columns

--- a/public/styles.css
+++ b/public/styles.css
@@ -213,3 +213,17 @@ td input[type="text"]:not(:disabled) {
   80% { opacity: 1; }
   100% { opacity: 0; display: none; }
 }
+
+th {
+    position: relative;
+  }
+
+.resizer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 5px;
+  height: 100%;
+  cursor: col-resize;
+  user-select: none;
+}
